# llama-vulkan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  context.cpp  ggml_file.cpp  ggml_file.h  llava_buffer.cpp  llava_buffer.h  llava_command.cpp  llava_command.h  llava_command_buffer.cpp  llava_command_buffer.h  llava_context.cpp  llava_context.h  llava_device_memory.cpp  llava_device_memory.h  llava_layer.cpp  llava_layer.h  llava_layer_session_data.cpp  llava_layer_session_data.h  llava_pipeline.cpp  llava_pipeline.h  llava_session.cpp  llava_session.h  main.cpp  prebuild_shaders.py  prebuild_shaders.sh  shader_7B_1024.glsl  types.h  utils.cpp  utils.h
server/: client.cpp  client.h  server.cpp  server.h  session_wrapper.cpp  session_wrapper.h  types.h
shaders/: add_logits.comp  add_logits.glsl  common.glsl  copy.comp  copy_to_cache.comp  copy_to_cache.glsl  kqv_matching.comp  kqv_matching.glsl  matmul.glsl  matmul_add_dim.glsl  matmul_add_dim_fp16.comp  matmul_add_dim_q8.comp  matmul_add_dim_q8_fp16.comp  matmul_add_ff.glsl  matmul_add_ff_fp16.comp  matmul_add_ff_q8.comp  matmul_add_ff_q8_fp16.comp  matmul_dim.comp  matmul_dim_fp16.comp  matmul_dim_q8.comp  matmul_dim_q8_fp16.comp  matmul_ff.comp  matmul_ff_fp16.comp  matmul_ff_q8.comp  matmul_ff_q8_fp16.comp  matmul_q8.glsl  matmul_silu_ff.comp  matmul_silu_ff.glsl  matmul_silu_ff_fp16.comp  matmul_silu_ff_q8.comp  matmul_silu_ff_q8_fp16.comp  mhsa.comp  mhsa.glsl  multiply.glsl  normalize.comp  normalize.glsl  q4_0_split.glsl  rope.comp  rope.glsl  silu.glsl  (+2 more)
